tests/errors/bare_prefix.error
parse error at line 1 column 8 for Tag:
prefix:
       ^